--- a/configs/info.conf
+++ b/configs/info.conf
@@ -12,6 +12,6 @@ conky.text = [[
 ${color0}Kernel: $color$kernel
 ${color0}Uptime: $color$uptime
 ${color0}Updates available: $color${texeci 21600 ruby ./scripts/system_updates.rb}
-${color0}Time local: ${color grey60}${exec date +"%H:%M"} ${goto 150}${color0}Moscow: $color${execi 30 TZ=Europe/Moscow date +"%H:%M"}
+${color0}Local: ${color grey60}${exec date +"%H:%M"} ${goto 170}${color0}NY: $color${execi 30 TZ=America/New_York date +"%H:%M"}
 ${color0}Load: $color$loadavg
 ]]
