--- a/configs/sys.conf
+++ b/configs/sys.conf
@@ -10,8 +10,8 @@
 
 conky.text = [[
 ${color0}RAM & CPU usage  ${hr 2}
-$color0 Total${goto 85}Free${goto 145}Buffers${goto 215}Cached${goto 290}Used
-$color$memmax${goto 75}$memfree${goto 145}$buffers${goto 215}$cached${alignr}$mem
+${color0}Free${goto 110}Buffers${goto 220}Cached${goto 330}Used
+$color$memfree${goto 110}$buffers${goto 220}$cached${alignr}$mem
 ${voffset 3}${color0}Fan speed: $color${execi 5 sensors | grep Fan | awk '{print $3}'} RPM
 ${execpi 5 ruby ./scripts/cpu.rb}
 ${color0}Name${goto 179}PID${goto 234}CPU%${goto 297}MEM
