--- a/secrets.yml.example
+++ b/secrets.yml.example
@@ -1,6 +1,6 @@
 network_interface: wlp1s0 # your wi-fi interface. Try "ip link show" command
 hard_drives:
-  activity_for: sda
+  activity_for: ['sda', 'sdb']
   partitions: # examples of partitions you want to monitor
     root: '/'
     home: '/home/your_user'
